objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>Account_Address_Kanji__c</fullName>
        <formula>Account.Kanji_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address (Kanji)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Account.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City1__c</fullName>
        <label>Account City1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City_Kanji__c</fullName>
        <formula>Account.Kanji_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City (Kanji)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_City__c</fullName>
        <formula>Account.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country1__c</fullName>
        <label>Account Country1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Division__c</fullName>
        <formula>Account.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Kanji__c</fullName>
        <formula>Account.Kanji_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name (Kanji)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State1__c</fullName>
        <label>Account State1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_State__c</fullName>
        <formula>Account.State_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Zip_Code__c</fullName>
        <formula>Account.Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_On_Flag__c</fullName>
        <formula>EDA_Card__r.Add_on_Flag__c</formula>
        <label>Add-On Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_on_Type__c</fullName>
        <formula>EDA_Card__r.Add_on_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add-on Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment__c</fullName>
        <formula>EDA_Card__r.Amendment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amendment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <formula>Entitlement_Number__c</formula>
        <label>Asset Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Letter__c</fullName>
        <formula>EDA_Card__r.Attachment_Letter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Category__c</fullName>
        <formula>TEXT(Product_Price__r.Product__r.Product_Attribute__r.BU_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Family__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Attribute__r.BU_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Summary__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Attribute__r.BU_Summary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <formula>EDA_Card__r.Booked_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>COPA_Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>COPA Integration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COP_Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>COP Integration Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cadence_Platform__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Attribute__r.Cadence_Platform__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cadence Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <formula>TEXT(Account.Channel_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractFlag__c</fullName>
        <label>Contract Flag</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatus__c</fullName>
        <label>Contract Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Internal__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_Internal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract_Contact_Internal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Flag__c</fullName>
        <formula>EDA_Card__r.Contract_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>This is a duplicate of Maintenance_Status__c  and should NOT be used</description>
        <label>Contract Type_DO_NOT_USE</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>Maintenance_Status__c</formula>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Licence__c</fullName>
        <formula>Maintenance_Status__c</formula>
        <label>Current Licence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Release__c</fullName>
        <formula>Release_Name__r.Name</formula>
        <label>Current Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sales__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_CurrentSales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number_DO_NOT_USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Account.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <label>Deal Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Account.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomainName__c</fullName>
        <label>DomainName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDA_Card__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EDA Card</label>
        <referenceTo>EDA_Card__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entitlement_End_Date__c</fullName>
        <label>Entitlement End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_ID__c</fullName>
        <label>Entitlement ID_DO_NOT_USE</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Number__c</fullName>
        <displayFormat>E-{000000}</displayFormat>
        <label>Entitlement Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <label>Exception Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>Quantity__c  *  Product_Price__r.Maint_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Family__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Attribute__r.External_Family_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FTDomainName1__c</fullName>
        <label>FT Domain Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTDomainName2__c</fullName>
        <label>FT Domain Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTFingerPrint1__c</fullName>
        <label>FT Finger Print1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTFingerPrint2__c</fullName>
        <label>FT Finger Print2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTHostName1__c</fullName>
        <label>FT HostName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTHostName2__c</fullName>
        <label>FT HostName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTIPAddress1__c</fullName>
        <label>FT IPAddress1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTIPAddress2__c</fullName>
        <label>FT IPAddress2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Tolerant_Host_Id1__c</fullName>
        <label>Fault Tolerant Host Id1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Tolerant_Host_Id2__c</fullName>
        <label>Fault Tolerant Host Id2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Tolerant_Server__c</fullName>
        <label>Fault Tolerant Server</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Tolerant_Servers__c</fullName>
        <formula>IF(
AND( ISBLANK( Fault_Tolerant_Host_Id1__c ),  ISBLANK( Fault_Tolerant_Host_Id2__c ))
, Locking_Id__c , 

 IF(AND( ISBLANK( Fault_Tolerant_Host_Id1__c), ISBLANK(Locking_Id__c)),Fault_Tolerant_Host_Id2__c, IF(AND( ISBLANK( Fault_Tolerant_Host_Id2__c), ISBLANK(Locking_Id__c)), Fault_Tolerant_Host_Id1__c, IF(ISBLANK( Fault_Tolerant_Host_Id1__c),Locking_Id__c +&apos;,&apos;+Fault_Tolerant_Host_Id2__c , IF(ISBLANK(Fault_Tolerant_Host_Id2__c), Locking_Id__c +&apos;,&apos;+Fault_Tolerant_Host_Id1__c, IF( ISBLANK( Locking_Id__c),Fault_Tolerant_Host_Id1__c+&apos;,&apos;+Fault_Tolerant_Host_Id2__c,Locking_Id__c +&apos;,&apos;+Fault_Tolerant_Host_Id1__c+&apos;,&apos;+Fault_Tolerant_Host_Id2__c))))))</formula>
        <label>Fault Tolerant Servers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fingerprint__c</fullName>
        <label>Fingerprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware_ID__c</fullName>
        <label>Hardware_ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HostName__c</fullName>
        <label>HostName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IPAddress__c</fullName>
        <label>IPAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Division__c</fullName>
        <formula>Account.Kanji_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kanji Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Expiration__c</fullName>
        <label>Key Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Order_Number__c</fullName>
        <label>Last Order No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_End__c</fullName>
        <label>License End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Start__c</fullName>
        <label>License Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <formula>Product_Price__r.Pricing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locking_Id__c</fullName>
        <label>Host Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locking_Type__c</fullName>
        <label>Locking Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flex ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dongle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host ID</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maint_Order_Number__c</fullName>
        <label>Maint Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_PO_Number__c</fullName>
        <label>Maint PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Pricing_Type__c</fullName>
        <formula>Product_Price__r.Pricing_Type__c+&apos;-M1&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint Pricing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Product__c</fullName>
        <formula>Product_Number__c+&apos;M1&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maint Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maint_Status__c</fullName>
        <formula>Maintenance_Status__c</formula>
        <label>Maint Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_End__c</fullName>
        <label>Maintenance End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Expiration_Date__c</fullName>
        <label>Maintenance Expiration Date_DO_NOT_USE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Start__c</fullName>
        <label>Maintenance Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maintenance_Status__c</fullName>
        <label>Maint Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterHW_Serial_Number__c</fullName>
        <label>MasterHW_Serial_Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Lic_Term_Date__c</fullName>
        <formula>EDA_Card__r.Max_Term_Date__c</formula>
        <label>Max Lic Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Lic_Term_Days__c</fullName>
        <formula>TEXT(EDA_Card__r.Contract__c)</formula>
        <label>Max Lic Term Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node_Id__c</fullName>
        <label>Node Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offering_Status__c</fullName>
        <label>Offering Status</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Orcad_ID__c</fullName>
        <label>Orcad ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Number__c</fullName>
        <label>Package Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the lookup to the parent account.</description>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>Migration</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Contract_Number__c</fullName>
        <formula>EDA_Card__r.Parent_Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_SAP_Number__c</fullName>
        <formula>EDA_Card__r.Parent_SAP_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent SAP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformType__c</fullName>
        <label>PlatformType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceBook_EDA_Card__c</fullName>
        <formula>EDA_Card__r.PriceBook_Detail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PriceBook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <formula>Product_Price__r.Pricebook_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_FOR__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_Primaryemail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary FOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_End__c</fullName>
        <label>Product End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Features__c</fullName>
        <formula>HYPERLINK(&quot;/apex/EntitlementProdFeatDetails?id=&quot;&amp; Id  , &quot;Click to see Product Features&quot; , &quot;_blank&quot;)</formula>
        <label>Product Features</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product_Price__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number - Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Num_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Num/Name_DO_NOT_USE</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prod No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PO_Number__c</fullName>
        <label>Product PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price</label>
        <referenceTo>Product_Price__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Start__c</fullName>
        <label>Product Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Prod Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Product_Price__r.Product__r.Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Contract_Number__c</fullName>
        <label>Reference Contract Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Name</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>Release_Name__r.Name</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RenMaint_Key__c</fullName>
        <formula>Maint_Product__c+&apos;_&apos;+Maint_Pricing_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RenMaint Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Version__c</fullName>
        <label>Revision/Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Entitlement_Number__c )</formula>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer__c</fullName>
        <description>Gets the SAP Customer # for the account</description>
        <formula>Account.SAP_Customer_ID_Mask__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number_EDA__c</fullName>
        <formula>EDA_Card__r.SAP_Order_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Status__c</fullName>
        <formula>EDA_Card__r.SAP_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Org_EDA_Card__c</fullName>
        <formula>EDA_Card__r.Sales_Org__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_FOR__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_Secondary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary FOR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name_DO_NOT_USE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Calendar__c</fullName>
        <label>Service Calendar</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <label>System Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV_TC__c</fullName>
        <formula>EDA_Card__r.TCV_TC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV(TC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_USD__c</fullName>
        <formula>EDA_Card__r.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech__c</fullName>
        <formula>EDA_Card__r.Contract_Contact_Tech__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Product_End__c  -  Product_Start__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VMUUID__c</fullName>
        <label>VMUUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAN__c</fullName>
        <label>WAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wan_Type__c</fullName>
        <label>WAN Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <label>Warranty End Date_DO_NOT_USE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>apts_product_num__c</fullName>
        <label>Apttus Product Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Better Boards</value>
        </filters>
        <label>All Licenses</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
</CustomObject>